# hatecpp

./: .clang-format  CMakeLists.txt  File_Reading.cc  LinkedListAllocator.cc  PoolAllocator.cc  TextContainer.cc  TextContainer.hh  constants.hh  main  main.cc  pool_allocators.cc  readme.md  war_en.txt
Allocators/: Allocator.hh  BinaryAllocator.cc  BlockHeader.hh  BuddyAllocator.cc  BuddyAllocator.hh  DescriptorAllocator.cc  DescriptorAllocator.hh  LinkedListAllocator.cc  LinkedListAllocator.hh  PoolAllocator.cc  PoolAllocator.hh  ReferenceAllocator.hh  STLAdapter.tpp  WIP_BuddyAllocator.cc  WIP_OriginalCodeFromClass.cc  main.cc
Allocators/resources/: Allocator.hh  File_Reading.cc  List.tpp  STLAdapter.tpp  TextContainer.cc  TextContainer.hh  constants.hh  test.txt
Binary tree/: BinarySearchTree.cc  BinarySearchTree.hh  main.cc  main_BinarySearchTree.cc
Pointers/: SmartPointer.cc  SynchroSmartPointer.cc  main.cc  main_SmartPointer.cc  main_SynchroSmartPointer.cc
